<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/statisticsContent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:id="@+id/state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_margin="8dp"
            android:padding="5dp"
            android:textColor="#000"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/totalCases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_cases"
            android:textSize="13sp"
            android:layout_margin="8dp"
            android:padding="5dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/deaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deaths"
            android:textSize="13sp"
            android:layout_margin="8dp"
            android:padding="5dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/recovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recovered"
            android:textSize="13sp"
            android:layout_margin="8dp"
            android:padding="5dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/activeCases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active_cases"
            android:textSize="13sp"
            android:layout_margin="8dp"
            android:padding="5dp"
            android:layout_weight="1"/>
    </LinearLayout>

</RelativeLayout>