<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.PreventionsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animSocialDistancing"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:lottie_fileName="social_distancing.json"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/txtSocialDistancing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/social_distancing"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_below="@+id/animSocialDistancing"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true" />

    <View
        android:id="@+id/dividerLineSocialDistancing"
        style="@style/Divider"
        android:layout_below="@+id/txtSocialDistancing"
        android:layout_marginTop="10dp"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animWashHands"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:lottie_fileName="wash_hands.json"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/dividerLineSocialDistancing"
        android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/txtWashHands"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wash_hands"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_below="@+id/animWashHands"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true" />

        <View
            android:id="@+id/dividerLineWashHands"
            style="@style/Divider"
            android:layout_below="@+id/txtWashHands"
            android:layout_marginTop="10dp"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animWearMask"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_fileName="wear_mask.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/dividerLineWashHands"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/txtWearMask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wear_mask"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_below="@+id/animWearMask"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true" />

        <View
            android:id="@+id/dividerLineWearMask"
            style="@style/Divider"
            android:layout_below="@+id/txtWearMask"
            android:layout_marginTop="10dp"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animSneezing"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_fileName="sneezing.json"
            android:layout_below="@+id/dividerLineWearMask"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/txtSneezing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sneezing"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_below="@+id/animSneezing"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true" />

        <View
            android:id="@+id/dividerLineSneezing"
            style="@style/Divider"
            android:layout_below="@+id/txtSneezing"
            android:layout_marginTop="10dp"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animStaySafeHome"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_fileName="stay_safe_home.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/dividerLineSneezing"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/txtStaySafeHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stay_safe_home"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_below="@+id/animStaySafeHome"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</ScrollView>